2010-01-20  Kent Tamura  <tkent@chromium.org>

Reviewed by Darin Adler.

        HTMLInputElement::valueAsDate setter support for type=time.
        https://bugs.webkit.org/show_bug.cgi?id=33825

        Add setter tests to input-valueasdate-time.js, and update the
        expectation.

        Note: the expectation file contains some FAIL lines. They are
        intentional because they test a unimplemented feature.

        * fast/forms/input-valueasdate-time-expected.txt:
        * fast/forms/script-tests/input-valueasdate-time.js:

2010-01-20  Kent Tamura  <tkent@chromium.org>

        Reviewed by Darin Adler.

        HTMLInputElement::valueAsDate setter support for type=time.
        https://bugs.webkit.org/show_bug.cgi?id=33825

        Introduce ISODateTime::setMillisecondsSinceMidnight() and add a
        SecondFormat parameter to ISODateTime::toString(). The main code
        logic for type=time is implemented in
        setMillisecondsSinceMidnightInternal() and toStringForTime()
        because the logic is going to be used for other types.

        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::setValueAsDate):
        * html/ISODateTime.cpp:
        (WebCore::positiveFmod):
        (WebCore::ISODateTime::setMillisecondsSinceMidnightInternal):
        (WebCore::ISODateTime::setMillisecondsSinceMidnight):
        (WebCore::ISODateTime::toStringForTime):
        (WebCore::ISODateTime::toString):
        * html/ISODateTime.h:
        (WebCore::ISODateTime::):

Canonical link: https://commits.webkit.org/44950@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53551 268f45cc-cd09-0410-ab3c-d52691b4dbfc